Edited menu option text to menu search

--- a/src/main/java/dealership/ui/MenuScreen.form
+++ b/src/main/java/dealership/ui/MenuScreen.form
@@ -11,8 +11,18 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="InventorySearchMenu">
           <Properties>
-            <Property name="text" type="java.lang.String" value="File"/>
+            <Property name="text" type="java.lang.String" value="Car Search"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="basicSearchOption">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Search"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="basicSearchOptionActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
       </SubComponents>
     </Menu>
